# pgc-a

./: .env.example  .gitignore  README.md  pyproject.toml
reports/: api_cli_contract_design.md  application_service_interface_design.md  contracting_pullback_best_t1_daily.json  contracting_pullback_best_t1_daily.md  contracting_pullback_deep_dive.json  contracting_pullback_deep_dive.md  cpb_6157_single_position_fixed_t1_20260401_20260506.md  cpb_6157_top1_fixed_t1_20260401_20260506.md  cpb_6157_top2_trade_details_20260401_20260506.md  cpb_6157_trade_details_202511.md  cpb_6157_trade_details_20260401_20260506.md  cpb_v2_strategy.json  cpb_v2_strategy.md  daily_pipeline_production_acceptance_20260514.md  daily_review_20260506.json  daily_review_20260506.md  daily_review_20260507.json  daily_review_20260507.md  daily_review_20260508.json  daily_review_20260508.md  daily_review_20260511.json  daily_review_20260511.md  daily_review_20260512.json  daily_review_20260512.md  daily_review_20260512_missed_gainers.json  daily_review_20260512_missed_gainers.md  daily_review_20260513.json  daily_review_20260513.md  daily_review_20260513_missed_gainers.json  daily_review_20260513_missed_gainers.md  daily_review_20260514.json  daily_review_20260514.md  daily_review_strategy.json  daily_review_strategy.md  dashboard_interaction_detail_design.md  dashboard_operator_flow_qa_20260514.md  dashboard_visual_component_design.md  dashboard_visual_qa_20260514.md  database_lineage_design.md  database_migration_execution_design.md  (+97 more)
scripts/: analyze_daily_review_strategy.py  analyze_pgc_pool.mjs  (+27 more)
(+193 files in other folders)
