[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pgc-trading"
version = "0.1.0"
description = "PGC quantitative stock selection and trading workflow tools."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]
test = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
